--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     text-decoration: none;
     transition: all .2s linear;
 }
+
+/* menu */
 header{
     position: fixed;
     top: 0;
@@ -18,7 +20,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 9%;
+    padding: 20px 5%;
 }
 header .logo{
     font-size: 30px;
@@ -32,7 +34,7 @@ header .logo span{
 .menu a{
     color: aliceblue;
     font-size: 20px;
-    margin: 20px;
+    margin: 15px;
 }
 .menu a:hover{
     color: burlywood;
@@ -107,98 +109,112 @@ section{
     padding: 10px 10px;
     display: inline-block;
 }
-.space{
-    background: none;
+.book .h1-book span:nth-child(5){
+    background-color: rgba(240, 248, 255, 0);
+    margin: 2px;
 }
-/* .span-1{
+/* .h1-book span:nth-child(1){
     animation-name: span1;
     animation-duration: 1s;
     animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 @keyframes span1{
     0%{
         transform: translateY(0%);
     }
     100%{
-        transform: translateY(-5);
+        transform: translateY(-50px);
     }
 }
-.span-2{
+.h1-book span:nth-child(2){
     animation-name: span2;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
+    animation-delay: 0.5s;
+    animation-direction: alternate;
 }
 @keyframes span2{
     0%{
         transform: translateY(0%);
     }
     100%{
-        transform: translateY(-5);
+        transform: translateY(-50px);
     }
 }
-.span-3{
+.h1-book span:nth-child(3){
     animation-name: span3;
-    animation-duration: 3s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
+    animation-delay: 1s;
+    animation-direction: alternate;
 }
 @keyframes span3{
     0%{
         transform: translateY(0%);
     }
     100%{
-        transform: translateY(-5);
+        transform: translateY(-50px);
     }
 }
-.span-4{
+.h1-book span:nth-child(4){
     animation-name: span4;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
+    animation-delay: 1.5s;
+    animation-direction: alternate;
 }
 @keyframes span4{
     0%{
         transform: translateY(0%);
     }
     100%{
-        transform: translateY(-5);
+        transform: translateY(-50px);
     }
 }
-.span-5{
-    animation-name: span5;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-}
-@keyframes span5{
-    0%{
-        transform: translateY(0%);
-    }
-    100%{
-        transform: translateY(-5);
-    }
-}
-.span-6{
+.h1-book span:nth-child(6){
     animation-name: span6;
-    animation-duration: 6s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
+    animation-delay: 2s;
+    animation-direction: alternate;
 }
 @keyframes span6{
     0%{
         transform: translateY(0%);
     }
     100%{
-        transform: translateY(-5);
+        transform: translateY(-50px);
     }
 }
-.span-7{
+.h1-book span:nth-child(7){
     animation-name: span7;
-    animation-duration: 7s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
+    animation-delay: 2.5s;
+    animation-direction: alternate;
 }
 @keyframes span7{
     0%{
         transform: translateY(0%);
     }
     100%{
-        transform: translateY(-5);
+        transform: translateY(-50px);
+    }
+}
+.h1-book span:nth-child(8){
+    animation-name: span8;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-delay: 3s;
+    animation-direction: alternate;
+}
+@keyframes span8{
+    0%{
+        transform: translateY(0%);
+    }
+    100%{
+        transform: translateY(-50px);
     }
 } */
 
@@ -279,7 +295,7 @@ section{
 }
 .btn-2{
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 10px;
     background-color: rgb(243, 161, 53);
     color: aliceblue;
     padding: 10px 20px;
@@ -287,11 +303,15 @@ section{
     font-size: 20px;
     border-radius: 5px;
 }
+.btn-2:hover{
+    background-color: rgba(243, 161, 53, 0.242);
+    color: rgb(209, 147, 12);
+}
 .packages .div-packages .box-packages .enf-packages-1{
     padding: 20px;
 }
 .packages .div-packages .box-packages .enf-packages-1 h3{
-    font-size: 30px;
+    font-size: 25px;
     color: #333;
 }
 .packages .div-packages .box-packages .enf-packages-1 p{
@@ -299,8 +319,226 @@ section{
     color: #666;
     padding: 10px 0;
 }
-.icons{
-    width: 5px;
+.packages .div-packages .box-packages .enf-packages-1 .ent-packages-2{
+    font-size: 20px;
+    color: #333;
+    padding-top: 5px;
+}
+
+.packages .div-packages .box-packages .enf-packages-1 .ent-packages-2 span{
+    color: #666;
+    font-size: 15px;
+    text-decoration: line-through;
+}
+
+
+
+
+/* services */
+.services .div-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+.services .div-container .box{
+    flex: 1 1 300px;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+}
+.services .div-container .box h3{
+    font-size: 25px;
+    color: #333;
+}
+.services .div-container .box p{
+    font-size: 15px;
+    color: #666;
+    padding: 10px 0;
+}
+.services .div-container .box:hover{
+    box-shadow: 0 10px 10px rgb(148, 146, 146);
+}
+
+
+/* information */
+.h1{
+    font-size: xx-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: relative;
+    left: -20px;
+}
+.information .countainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+}
+.information .countainer video{
+    border-radius: 40px;
+}
+
+.information .countainer p{
+    color: #666;
+    padding-right: 50px;
+    padding-top: 40px;
+    padding-left: 0;
+    
+    font-size: larger;
+    text-transform: none;
+}
+
+
+
+/* gallery */
+.gallery .div-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+.gallery .div-container .box{
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(148, 146, 146, 0.84);
+    border: 10px solid #fff;
+    border-radius: 5px;
+    flex: 1 1 300px;
+    height: 270px;
+    position: relative;
+}
+.gallery .div-container .box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.gallery .div-container .box .div-enf{
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(0,0,0,.7);
+    padding-top: 50px;
+    transform: translateY(0);
+    transition-duration: 1s;
+}
+.gallery .div-container .box .div-enf h3{
+    font-size: 25px;
+    color: rgb(243, 161, 53);
+}
+.gallery .div-container .box .div-enf p{
+    font-size: 15px;
+    color: aliceblue;
+    padding: 5px 0;
+}
+.gallery .div-container .box:hover .div-enf{
+    transform: translateY(-102%);
+}
+
+
+
+/* hotels */
+
+.hotels .div-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+.hotels .div-container .box{
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(148, 146, 146, 0.84);
+    /* border: 10px solid #fff;*/
+    border-radius: 30px; 
+    flex: 1 1 300px;
+    height: 300px;
+    position: relative;
+}
+.hotels .div-container .box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.hotels .div-container .box .div-enf{
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(0,0,0,.7);
+    padding-top: 50px;
+    transform: translateY(0);
+    transition-duration: 1s;
+}
+.hotels .div-container .box .div-enf h3{
+    font-size: 25px;
+    color: rgb(243, 161, 53);
+    padding-top:50px;
+    padding-bottom: 15px;
+}
+.hotels .div-container .box:hover .div-enf{
+    transform: translateY(-102%);
+}
+
+
+
+/* contact */
+.contact .div-contact{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    align-items: center;
+}
+.contact .div-contact .image{
+    flex: 1 1 350px;
+}
+.contact .div-contact .image  img{
+    width: 100%;
+}
+.contact .div-contact form{
+    flex: 1 1 500px;
+    padding: 20px ;
+    box-shadow: 0 10px 20px rgba(0,0,0,.1);
+    border-radius: 5px;
+}
+.contact .div-contact form .div-input{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.contact .div-contact form .div-input input{
+    width: 49%;
+    margin: 10px 0;
+    padding: 10px;
+    font-size: 17px;
+    color: #333;
+    background-color: rgba(135, 132, 132, 0.1);
+    text-transform: none;
+}
+.contact .div-contact form textarea{
+    width: 49%;
+    margin: 10px 0;
+    padding: 10px;
+    font-size: 17px;
+    color: #333;
+    background-color: rgba(135, 132, 132, 0.1);
+    text-transform: none;
+}
+.contact .div-contact form textarea{
+    height: 150px;
+    resize: none;
+    width: 100%;
+}
+.btn-3{
+    display: inline-block;
+    margin-top: 20px;
+    background-color: rgb(243, 161, 53);
+    color: aliceblue;
+    padding: 15px 20px;
+    border: 2px solid rgb(243, 161, 53);
+    font-size: 20px;
+    border-radius: 20px;
+}
+.btn-3:hover{
+    box-shadow: 10px 10px 10px gray;
+    transform: scale(1.1);
 }
 
 
